manifests/apps/rsshub/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rsshub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rsshub
  template:
    metadata:
      labels:
        app: rsshub
    spec:
      containers:
        - name: rsshub
          image: diygod/rsshub:latest
          ports:
            - containerPort: 1200
          livenessProbe:
            httpGet:
              path: /healthz
              port: 1200
            initialDelaySeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: 1200
            initialDelaySeconds: 10
            timeoutSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: browserless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: browserless
  template:
    metadata:
      labels:
        app: browserless
    spec:
      containers:
        - name: browserless
          image: browserless/chrome:1.43-chrome-stable
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /pressure
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /pressure
              port: 3000
            initialDelaySeconds: 10
            timeoutSeconds: 5
