manifests/apps/rsshub/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rsshub
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  ingressClassName: traefik
  rules:
    - host: rsshub.lucc.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rsshub
                port:
                  number: 1200
  tls:
    - hosts:
        - rsshub.lucc.dev
      secretName: rsshub-tls
